# mark_examples

./: .gitignore
test_automation/: .gitignore
test_automation/python/: pyproject.toml
test_automation/python/libraries/ui/: __init__.py  base_page.py  login_page.py
test_automation/python/libraries/ui/locators/: login_page.json
test_automation/python/libraries/utils/: locator_loader.py
test_automation/python/robot_tests/: login_tests.robot
test_automation/python/robot_tests/data/: test_data.robot
test_automation/python/robot_tests/keywords/: ui_library.py
test_automation/python/robot_tests/resources/flows/: auth_flow.resource
test_automation/python/robot_tests/resources/pages/: login_page.resource
test_automation/python/robot_tests/steps/: login_steps.robot
test_automation/python/tests/: conftest.py  test_login.py  test_sample.py
test_automation/python/tests_pytest/: test_login.py
