[project]
name = "playwright-examples"
version = "0.1.0"
description = ""
authors = [
    {name = "Mark Hintermeister",email = "Markhint22@yahoo.com"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "playwright (>=1.58.0,<2.0.0)",
    "pytest-playwright (>=0.7.2,<0.8.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "faker (>=40.11.0,<41.0.0)",
    "allure-pytest (>=2.15.3,<3.0.0)",
    "robotframework (>=7.0.0,<8.0.0)",
    "robotframework-browser (>=18.0.0,<19.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.5,<5.0.0)",
    "black (>=26.3.1,<27.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.poetry]
package-mode = false